# 420AI

./: .env.example  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  CONTEXT.md  LICENSE  PRD.md  README.bak.md  README.md  SUMMARY.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.global-setup.ts
.agents/code-reviews/: m10-operational-alerts.md  m10-slice2-custom-file-log-connector.md  m10-slice3a-exports.md  m10-slice3b-replay-metadata.md  m10-slice3c-persisted-alerts.md  m10-slice3d-catalog-signing.md  m11-slice1-walking-skeleton.md  m11-slice2-sync-health-connectors.md  m11-slice3-pairing-autostart-keychain.md  m11-slice4-settings-server-supervision.md  m11-slice5-packaging-docs.md  m12-slice1-basic-search.md  m12-slice2a-dashboard-read-surfaces.md  m12-slice2b-dashboard-mutations.md  m12-slice3-auth-hardening.md  m12-slice4-ops-baseline.md  m12-slice5-archive-replay.md  m12-slice6-alert-delivery.md  m12-slice7a-codex-failure-classification.md  m12-slice7b-connector-permission-scopes.md  m12-slice7c-connector-catalog-as-data.md  m12-slice7d-cursor-antigravity-connectors.md  m12-slice8-export-distribution-polish.md  m13-slice-13.1-truth-and-small-fixes.md  m13-slice-13.2-report-engine-expansion.md  m13-slice3-archive-reparse.md  m13-slice4-incremental-search.md  m13-slice5-alert-delivery.md  m13-slice6-scheduled-reports.md  m13-slice7-cursor-connector.md  m14-slice0-1-spike-and-truth.md  m14-slice2-catalog-admin-uis.md  m14-slice3-desktop-polish-trio.md  m14-slice4-per-event-search.md  m14-slice5-claude-export.md  m14-slice6-chatgpt-gemini-exports.md  m14-slice7-browser-extension.md  m5-project-workspace-mapping.md  m6-event-projections.md  m7-reporting-foundation.md  (+2 more)
.agents/execution-reports/: m12-slice1-basic-search.md  m12-slice2a-dashboard-read-surfaces.md  m12-slice3-auth-hardening.md  m12-slice5-archive-replay.md  m12-slice7a-codex-failure-classification.md  m12-slice7b-connector-permission-scopes.md  m12-slice7c-connector-catalog-as-data.md  m12-slice7d-cursor-antigravity-connectors.md  m12-slice8-export-distribution-polish.md  m13-slice-13.1-truth-and-small-fixes.md  m13-slice-13.2-report-engine-expansion.md  m13-slice4-incremental-search.md  m13-slice5-alert-delivery.md  m13-slice6-scheduled-reports.md  m13-slice7-cursor-connector.md  m14-slice0-1-spike-and-truth.md  m14-slice2-catalog-admin-uis.md  m14-slice3-desktop-polish-trio.md  m14-slice4-per-event-search.md  m14-slice5-chat-export-connectors.md  m14-slice6-chatgpt-gemini-exports.md  m14-slice7-browser-extension.md  m4-m6-execution.md  m7-m9-reporting-to-live-monitor.md  m7-reporting-foundation.md
.agents/plans/: m1-walking-skeleton-claude-code.md  m10-operational-alerts.md  m10-slice1-git-outcomes-attribution.md  m10-slice2-custom-file-log-connector.md  m10-slice3a-exports.md  m10-slice3b-replay-metadata.md  m10-slice3c-persisted-alerts.md  m10-slice3d-catalog-signing.md  m11-slice2-sync-health-connectors.md  m11-slice3-pairing-autostart-keychain.md  m11-slice4-settings-server-supervision.md  m11-slice5-packaging-docs.md  m11-tauri-desktop.md  m12-slice1-basic-search.md  m12-slice2a-dashboard-read-surfaces.md  m12-slice2b-dashboard-mutations.md  m12-slice3-auth-hardening.md  m12-slice4-ops-baseline.md  m12-slice5-archive-replay.md  m12-slice6-alert-delivery.md  m12-slice7a-codex-failure-classification.md  m12-slice7b-connector-permission-scopes.md  m12-slice7c-connector-catalog-as-data.md  m12-slice7d-cursor-antigravity-connectors.md  m12-slice8-export-distribution-polish.md  m13-capability-gap-closure.md  m14-general-ai-chat-capture.md  m14-slice2-catalog-admin-uis.md  m14-slice3-desktop-polish-trio.md  m14-slice4-per-event-search.md  m14-slice5-chat-export-connectors.md  m14-slice6-chatgpt-gemini-exports.md  m14-slice7-browser-extension.md  m2-archive-deployment.md  m3-collector-foundation.md  m4-connectors-full-fidelity.md  m5-project-workspace-mapping.md  m6-event-projections.md  m7-reporting-foundation.md  m8-ai-interpretation.md  (+1 more)
.agents/system-reviews/: m10-m13-review.md  m4-m6-review.md  m7-m9-review.md  (+1 more)
.githooks/: pre-commit
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: autostart.rs  keychain.rs  lib.rs  main.rs  pairing.rs  proxy.rs  server.rs  sidecar.rs  tray.rs
docker/: init-test-db.sql
docs/: CONTEXT.md  PRD.md
scripts/: CATALOG-SIGNING.md  backup-archive.sh  check-summary.mjs  check-summary.test.ts  generate-reports.mjs  generate-reports.test.ts  repo-health.mjs  restore-archive.sh  setup-env.mjs  setup-env.test.ts  sign-catalog.ts
(+276 files in other folders)
