[package]
name = "desktop"
version = "0.1.0"
description = "420AI Collector desktop/tray app"
authors = ["420AI"]
edition = "2021"
rust-version = "1.77"

# The mobile-ready Tauri v2 layout: a thin main.rs delegates to this lib so the
# same `run()` can be reused by a future mobile entrypoint.
[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
# rustls-tls (not the default native-tls) avoids an OpenSSL/SChannel native build on
# Windows; `json` enables `.json::<Value>()`. The async client runs on Tauri's tokio runtime.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
